...
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="0.5"/>
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/productName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:hint="Product Name"
                    android:layout_weight="0.5"/>
                <EditText
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:hint="Price"
                    android:layout_weight="0.5"/>
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="true"
                        android:text="Women"
                        android:layout_weight="0.5"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/clothes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="true"
                        android:text="Clothes"
                        android:layout_weight="0.33"/>

...
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="0.5"/>
            </TableRow>

            <TableRow>
                <Spinner
                    android:id="@+id/size1"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:dropDownWidth="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overlapAnchor="false" />

                <EditText
                    android:id="@+id/quantity1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="0.5"
                    android:hint="Quantity"
                    android:layout_margin="10dp"
                    android:inputType="number"/>
            </TableRow>

            <TableRow>
                <Spinner
                    android:id="@+id/size2"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:dropDownWidth="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overlapAnchor="false" />

                <EditText
                    android:id="@+id/quantity2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="0.5"
                    android:layout_margin="10dp"
                    android:hint="Quantity" />
            </TableRow>

            <TableRow>
                <Spinner
                    android:id="@+id/size3"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:dropDownWidth="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overlapAnchor="false" />

                <EditText
                    android:id="@+id/quantity3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="0.5"
                    android:hint="Quantity"
                    android:layout_margin="10dp"
...
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"/>

            <Button
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:layout_margin="10dp"
                android:layout_gravity="center"/>

...
