<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_log_in"
    android:layout_weight="0.5"
    android:background="@drawable/log_in_box"
    android:clickable="true"
    tools:context=".user.LogInFragment">

    <LinearLayout
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Please enter your Address" />

        <EditText
            android:id="@+id/townInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="Address (9 The Pines)"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="Town/City (Castletroy)"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/countyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="County (Limerick)"
            android:inputType="textPersonName" />
    </LinearLayout>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Please enter your Card Details" />

        <EditText
            android:id="@+id/cardNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="Name of Card Holder"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cardNumInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="16 digit Card Number"
            android:inputType="number" />

        <EditText
            android:id="@+id/expiryDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="Expiry Date (10/2021)"
            android:inputType="date" />

        <EditText
            android:id="@+id/cvvInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="3 Digit CVV"
            android:inputType="number" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit" />
    </LinearLayout>

</RelativeLayout>
