...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="#595757"
        android:gravity="center_horizontal"
        android:orientation="vertical">
...
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="normal" />
...
                android:text="@string/size"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantity"
            android:hint="Quantity"
            android:inputType="number"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Add to Cart" />

        <Button
            android:id="@+id/aS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Add Stock" />
    </LinearLayout>

...
